Next iteration (#8)
fix z2m